2004-09-22 Eric Schabell <z-rejected@sourcemage.org>
	* z-editors/openoffice-bin: renamed spell to lower-case, modified
	  so that install is non-gui, install is tracked and bumped v1.1.3rc.
	* z-editors/OpenOffice-bin: deprecated.
	* z-devel/ghc: new spell added (haskell compiler).

2004-09-18 Eric Schabell <z-rejected@sourcemage.org>
	* z-mail/netqmail: created new section z-mail for new spell
	  netqmail, bug #6767.
	* MAINTAINER: added at grimoire level, only holds generic guru
	  address so never needs to be modified again. Removed all 
		section MAINTAINER files, waste of space.

2004-09-16 Eric Schabell <z-rejected@sourcemage.org>
	* z-utils/skype: version bump 0_91_0_12.

2004-08-26 Eric Schabell <z-rejected@sourcemage.org>
	* REJECTED_MSG: updated to reflect that only stable sorcery
	  is missing proper handling of reject messages.

2004-08-24 Eric Schabell <z-rejected@sourcemage.org>
	* z-http/opera: version bump to 7.54.
	* z-java/j2sdk: fixed problem with version number in logs.

2004-08-14 Eric Schabell <z-rejected@sourcemage.org>
	* z-java/JAVA_WARNING: added for downloading source warning.
	* z-java: updated all spells to use JAVA_WARNING.

2004-08-11 Eric Schabell <z-rejected@sourcemage.org>
	* z-editors/OpenOffice-bin: cleaned up PREPARE messages.

2004-08-09 Eric Schabell <z-rejected@sourcemage.org>
	* z-java: section api2 compliant and rejected msg.
	* all-sections/API_BUILD: deleted to be added at grimoire
	  level. Entire grimoire is api2 compliant!

2004-08-08 Eric Schabell <z-rejected@sourcemage.org>
	* z-http: section api2 compliant and rejected msg.

2004-08-07 Eric Schabell <z-rejected@sourcemage.org>
	* z-graphics: section api2 compliant and rejected msg.
	* z-utils: section api2 compliant and rejected msg.
	* z-utils/skype: user can now decide to use dynamic
	  linked to QT or static versions via user query.
	* z-x11: section api2 compliant and rejected msg.
	* z-science: section api2 compliant and rejected msg.