@@ -1,0 +1,1 @@
+conflicts firefox
