@@ -1,0 +1,6 @@
+# tarball has been extracted, just copy to the correct directory.
+INSTALLDIR=/opt/firefox-installer
+
+mkdir -pv $INSTALLDIR                            &&
+cp -Rv $SOURCE_DIRECTORY/* $INSTALLDIR           &&
+cp $SCRIPT_DIRECTORY/firefox.sh /etc/profile.d/ 
