@@ -1,0 +1,1 @@
+provides GRAPHICAL-WEB-BROWSER
