@@ -1,0 +1,5 @@
+2004-09-22 Eric Schabell <eschabell@sourcemage.org>
+	* ALL: added spell.
+
+2004-09-02 Rafael George <rgeoge@yatusabes.com>
+	* ALL: Created spell.
